added implementation for changes
